package Structural.Adapter.Interface;

public interface WeightMachineAdaptee {
    public double getWeightInPounds();
}
