package Structural.Adapter.Interface;

public interface WeightMachineAdapter {
    public double getWeightInKg();
}
